# Codex-research-skill

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  pyproject.toml
.codex/: repo-profile.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release-image.yml
deploy/: .env.example  compose.yaml
deploy/kubernetes/: configmap.yaml  deployment.yaml  ingress.example.yaml  migrate-job.yaml  secret.example.yaml  service.yaml
docs/: api-quickstart.md  architecture.md  deploy-kubernetes.md  deploy-local.md  deploy-shared-compose.md  faq.md  getting-started.md  implicit-research-capture.md  memory-retrieval-skill.md  operations.md  repo-aware-capture.md  research-pass-suite.md
skills/research-capture/: SKILL.md
skills/research-capture/agents/: openai.yaml
skills/research-capture/references/: queue-fallback.md  repo-aware.md  routing.md  workflow.md
skills/research-memory-retrieval/: SKILL.md
skills/research-memory-retrieval/agents/: openai.yaml
skills/research-memory-retrieval/references/: deposit-rubric.md  summary-contract.md  topic-taxonomy.md  workflow.md
src/research_registry/: __init__.py  app.py  backend_client.py  backend_selection.py  capture_queue.py  capture_queue_cli.py  cli.py  config.py  db.py  domain_research_harness.py  external_ingest.py  local_install.py  local_manager.py  local_research.py  local_status.py  local_stop.py  local_token.py  local_uninstall.py  managed_config.py  mcp_server.py  mcp_tools.py  memory_retrieval_harness.py  memory_retrieval_skill.py  migrate.py  migration_runner.py  models.py  repo_intelligence.py  research_capture.py  research_pass_runner.py  research_pass_suite.py  seed_demo.py  seed_memory_retrieval.py  service.py  specialist_domains.py  web.py
src/research_registry.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/research_registry/migrations/: 0001_initial.sql  0002_workflows_and_trust.sql
src/research_registry/static/: style.css
src/research_registry/templates/: admin_dashboard.html  admin_login.html  annotation_detail.html  base.html  claim_detail.html  excerpt_detail.html  finding_detail.html  index.html  question_detail.html  report_detail.html  source_detail.html
tests/: test_capture_queue.py  test_cli.py  test_docs_contract.py  test_http_e2e.py  test_implicit_research_capture.py  test_local_install_smoke.py  test_local_manager.py  test_memory_retrieval_skill_harness.py  test_memory_retrieval_support.py  test_migrations.py  test_postgres_smoke.py  test_registry.py  test_repo_intelligence.py  test_research_pass_runner.py  test_research_pass_suite.py  test_shared_compose_smoke.py  test_skill_package.py  test_specialist_domains.py
