[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-registry"
version = "0.1.0"
description = "A source-backed research registry for agents and humans."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "itsdangerous>=2.2,<3",
  "jinja2>=3.1,<4",
  "mcp[cli]>=1.9,<2",
  "pydantic>=2.8,<3",
  "python-multipart>=0.0.9,<1",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.0,<9",
]

[project.scripts]
research-registry-web = "research_registry.__main__:main"
research-registry-mcp = "research_registry.mcp_server:main"
research-registry-seed = "research_registry.seed_demo:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
research_registry = ["templates/*.html", "static/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
