[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-registry"
version = "0.1.0"
description = "A source-backed research registry for agents and humans."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Research Registry contributors" },
]
keywords = ["research", "mcp", "codex", "llm", "memory", "retrieval", "rag"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "itsdangerous>=2.2,<3",
  "jinja2>=3.1,<4",
  "mcp[cli]>=1.9,<2",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.8,<3",
  "python-multipart>=0.0.9,<1",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "pytest>=8.0,<9",
]

[project.scripts]
research-registry-web = "research_registry.__main__:main"
research-registry-mcp = "research_registry.mcp_server:main"
research-registry-seed = "research_registry.seed_demo:main"
research-registry-seed-memory-retrieval = "research_registry.seed_memory_retrieval:main"
research-registry-capture-queue = "research_registry.capture_queue_cli:main"
research-registry-memory-retrieval-harness = "research_registry.memory_retrieval_harness:main"
research-registry-domain-harness = "research_registry.domain_research_harness:main"
research-registry-pass-suite = "research_registry.research_pass_suite:main"
research-registry-pass-runner = "research_registry.research_pass_runner:main"
research-registry-migrate = "research_registry.migrate:main"
research-registry-local-install = "research_registry.local_install:main"
research-registry-local-status = "research_registry.local_status:main"
research-registry-local-stop = "research_registry.local_stop:main"
research-registry-local-token = "research_registry.local_token:main"
research-registry-local-uninstall = "research_registry.local_uninstall:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
research_registry = ["templates/*.html", "static/*.css", "migrations/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
